--- a/src/components/blocks/product/card-product.pug
+++ b/src/components/blocks/product/card-product.pug
@@ -33,6 +33,7 @@ mixin card-product()
               | Профиль такого ролика для мебельного станка может быть прямым, закругленным, скошенным.
 
           .card-product__info
+            span
             i Возможно размещение логотипа вашей компании на&nbsp;упаковке
 
           form.card-product__form(action="product.html", method="get", autocomplete="off")
@@ -65,50 +66,50 @@ mixin card-product()
 
               .card-product__buttons-wrapper
 
-                +btn().card-product__order-btn.btn--base
+                +btn().card-product__order-btn.btn--clear
                   span Запрос в 1 клик
 
                 +btn({type: "submit"}).btn--cart.card-product__cart-btn
                   +icon("icon-cart", 18, 21)
                   span В корзину
 
-            .card-product__specification-block
-              .title.title--small-large.card-product__specification-title
-                h3 Характеристики
+          .card-product__specification-block
+            .title.title--small-large.card-product__specification-title
+              h3 Характеристики
 
-              dl.card-product__specification
+            dl.card-product__specification
 
-                .card-product__specification-set
-                  dt.card-product__term Упаковка:
-                  dd.card-product__definition Картон
+              .card-product__specification-set
+                dt.card-product__term Упаковка:
+                dd.card-product__definition Картон
 
-                .card-product__specification-set
-                  dt.card-product__term Материал упаковки:
-                  dd.card-product__definition Хром-эрзац
+              .card-product__specification-set
+                dt.card-product__term Материал упаковки:
+                dd.card-product__definition Хром-эрзац
 
-                .card-product__specification-set
-                  dt.card-product__term Размера подарка, см:
-                  dd.card-product__definition
+              .card-product__specification-set
+                dt.card-product__term Размера подарка, см:
+                dd.card-product__definition
 
-                    ul.card-product__sizes
-                      li.card-product__size.card-product__size--width
-                        span 18
-                      li.card-product__size.card-product__size--depth
-                        span 6
-                      li.card-product__size.card-product__size--height
-                        span 19
+                  ul.card-product__sizes
+                    li.card-product__size.card-product__size--width
+                      span 18
+                    li.card-product__size.card-product__size--depth
+                      span 6
+                    li.card-product__size.card-product__size--height
+                      span 19
 
-                .card-product__specification-set
-                  dt.card-product__term Вес:
-                  dd.card-product__definition
+              .card-product__specification-set
+                dt.card-product__term Вес:
+                dd.card-product__definition
 
-                    ul.card-product__weight
-                      li.card-product__weight-item
-                        span 400 гр.,
-                      li.card-product__weight-item
-                        span 800 гр.
+                  ul.card-product__weight
+                    li.card-product__weight-item
+                      span 400 гр.,
+                    li.card-product__weight-item
+                      span 800 гр.
 
-                .card-product__specification-set
-                  dt.card-product__term Вложения:
-                  dd.card-product__definition 41 шт.
-                    +link({href: "#", text: "Детальный состав", ariaLabel:"Переход к детализации состава."}).card-product__specification-link
+              .card-product__specification-set
+                dt.card-product__term Вложения:
+                dd.card-product__definition 41 шт.
+                  +link({href: "#", text: "Детальный состав", ariaLabel:"Переход к детализации состава."}).card-product__specification-link
