--- a/src/scss/pages/product.scss
+++ b/src/scss/pages/product.scss
@@ -1,4 +1,12 @@
 .product {
   display: flex;
   flex-direction: column;
+
+  &__card-product {
+    margin-bottom: 90px;
+
+    @include vp-tablet {
+      margin-bottom: 100px;
+    }
+  }
 }
