--- a/src/scss/blocks/product/card-product.scss
+++ b/src/scss/blocks/product/card-product.scss
@@ -1,7 +1,91 @@
 .card-product {
-  display: flex;
-  flex-direction: column;
+  max-width: 100vw;
   color: $base;
+
+
+  &__container {
+    display: flex;
+    flex-direction: column;
+
+    @include vp-tablet-landscape {
+      display: grid;
+      grid-template-columns: 50% 50%;
+    }
+  }
+
+
+  &__image-container {
+  width: 100%;
+  height: fit-content;
+
+    .swiper-slide {
+      display: grid;
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__image-cards {
+    display: flex;
+    width: 100%;
+  }
+
+  &__image-card {
+    border: none;
+    width: 100%;
+  }
+
+  &__image-content{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    padding: 32.81% 0;
+
+    overflow: hidden;
+    width: 100%;
+
+    @include vp-tablet {
+      padding: 25.46% 0;
+    }
+
+    @include vp-tablet-landscape {
+      padding: 24.71% 0;
+    }
+
+    img {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      width: auto;
+      height: 100%;
+
+      object-fit: cover;
+      object-position: center;
+
+      background-color: $white;
+      margin: 0 auto;
+
+      user-select: none;
+    }
+  }
+
+  &__gallery {
+    display: none;
+
+    @include vp-tablet-landscape {
+      display: grid;
+      place-items: center;
+      width: 90%;
+      height: 120px;
+      background-color: $accent-bg-items;
+      color: red;
+      border-radius: 8px;
+    }
+  }
 
   &__title {
     margin-bottom: 10px;
