feat(composition): создает и подключает файлы блока к странице продукта

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -14,7 +14,7 @@ include ./blocks/index/popular
 include ./blocks/index/news-company
 
 include ./blocks/product/card-product
-
+include ./blocks/product/composition
 
 //- UI
 include ./ui/icon
