--- a/src/pages/product.pug
+++ b/src/pages/product.pug
@@ -4,3 +4,4 @@ block pageContent
 
   +card-product().product__card-product
   +advantages().product__advantages
+  +composition().product__composition
