--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,6 +38,7 @@
 @import 'blocks/index/news-company.scss';
 
 @import 'blocks/product/card-product.scss';
+@import 'blocks/product/composition.scss';
 
 // PAGES
 @import 'pages/page-home.scss';
