--- a/src/components/blocks/product/composition.pug
+++ b/src/components/blocks/product/composition.pug
@@ -139,4 +139,4 @@ mixin composition()
                     .title.title--small-extra.composition__card-title
                       h3!= option.textTitle
 
-          +request().composition__request
+          +request("Хотите другой состав?").composition__request
