feat(viewed): создает блок с компонентом слайдера карточек

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -6,6 +6,7 @@ include ./blocks/common/confidence
 include ./blocks/common/company
 include ./blocks/common/certificates
 include ./blocks/common/cooperation
+include ./blocks/common/viewed
 
 //- page-name..
 include ./blocks/index/intro
@@ -27,3 +28,4 @@ include ./ui/catalog-card
 include ./ui/request
 include ./ui/news-cards
 include ./ui/custom-toggle
+include ./ui/slider-card
