--- a/src/pages/product.pug
+++ b/src/pages/product.pug
@@ -5,3 +5,5 @@ block pageContent
   +card-product().product__card-product
   +advantages().product__advantages
   +composition().product__composition
+
+  +viewed().product__viewed
