--- a/src/scss/pages/product.scss
+++ b/src/scss/pages/product.scss
@@ -11,4 +11,12 @@
       margin-bottom: 100px;
     }
   }
+
+  &__viewed {
+    margin-bottom: 110px;
+
+    @include vp-tablet {
+      margin-bottom: 120px;
+    }
+  }
 }
