feat(similar-product): создает блок и его работу

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -16,6 +16,7 @@ include ./blocks/index/news-company
 
 include ./blocks/product/card-product
 include ./blocks/product/composition
+include ./blocks/product/similar-product
 
 //- UI
 include ./ui/icon
