--- a/src/components/blocks/product/composition.pug
+++ b/src/components/blocks/product/composition.pug
@@ -1,5 +1,4 @@
 mixin composition()
-
   -
     const navSections = [
       {
@@ -15,6 +14,7 @@ mixin composition()
 
     const sectionCardOptions = {
 
+      //- заглавие раздела
       'Раздел 1 &#40;8&#41;': [
         {
           textInfo: 'х1',
@@ -58,6 +58,7 @@ mixin composition()
         },
       ],
 
+      //- заглавие раздела
       'Раздел 2 &#40;20&#41;': [
         {
           textInfo: 'х1',
