--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -41,6 +41,7 @@
 
 @import 'blocks/product/card-product.scss';
 @import 'blocks/product/composition.scss';
+@import 'blocks/product/similar-product.scss';
 
 // PAGES
 @import 'pages/page-home.scss';
