--- a/src/scss/blocks/product/composition.scss
+++ b/src/scss/blocks/product/composition.scss
@@ -57,9 +57,10 @@
     }
 
     @include vp-tablet-landscape {
-      //border-radius: 8px;
+      position: sticky;
+      top: 0;
+      z-index: 2;
       padding: 40px 25px 35px;
-      //height: fit-content;
 
       grid-column: 1 / 2;
       grid-row: 1 / 2;
@@ -81,7 +82,6 @@
       }
 
       @include vp-tablet-landscape {
-        //border-radius: 6px;
         margin-bottom: 14px;
       }
     }
