feat(breadcrumbs): создаёт блок и стили блока

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -7,6 +7,7 @@ include ./blocks/common/company
 include ./blocks/common/certificates
 include ./blocks/common/cooperation
 include ./blocks/common/viewed
+include ./blocks/common/breadcrumbs
 
 //- page-name..
 include ./blocks/index/intro
