--- a/src/scss/pages/product.scss
+++ b/src/scss/pages/product.scss
@@ -2,6 +2,15 @@
   display: flex;
   flex-direction: column;
 
+  &__breadcrumbs {
+    margin-bottom: 40px;
+
+    @include vp-tablet {
+      margin-bottom: 50px;
+    }
+
+  }
+
   &__similar-product,
   &__composition,
   &__advantages,
