--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,6 +32,7 @@
 @import 'blocks/common/certificates.scss';
 @import 'blocks/common/cooperation.scss';
 @import 'blocks/common/viewed.scss';
+@import 'blocks/common/breadcrumbs.scss';
 
 // page-name..
 @import 'blocks/index/intro.scss';
