--- a/src/pages/catalog.pug
+++ b/src/pages/catalog.pug
@@ -1,3 +1,9 @@
 extends /layouts/main.pug
 
 block pageContent
+  -
+    const nameIitemsBreadcrumbs = [
+      "Каталог",
+    ];
+
+  +breadcrumbs(nameIitemsBreadcrumbs).product__breadcrumbs
