feat(catalog-block): создаёт сетку блока

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -19,6 +19,8 @@ include ./blocks/product/card-product
 include ./blocks/product/composition
 include ./blocks/product/similar-product
 
+include ./blocks/catalog/catalog-block
+
 //- UI
 include ./ui/icon
 include ./ui/img
