--- a/src/pages/catalog.pug
+++ b/src/pages/catalog.pug
@@ -6,4 +6,5 @@ block pageContent
       "Каталог",
     ];
 
-  +breadcrumbs(nameIitemsBreadcrumbs).product__breadcrumbs
+  +breadcrumbs(nameIitemsBreadcrumbs).catalog__breadcrumbs
+  +catalog-block().catalog__catalog-block
