--- a/src/scss/pages/catalog.scss
+++ b/src/scss/pages/catalog.scss
@@ -1,4 +1,21 @@
 .catalog {
   display: flex;
   flex-direction: column;
+
+  &__breadcrumbs {
+    margin-bottom: 40px;
+
+    @include vp-tablet {
+      margin-bottom: 50px;
+    }
+
+  }
+
+  &__catalog-block {
+    margin-bottom: 90px;
+
+    @include vp-tablet {
+      margin-bottom: 100px;
+    }
+  }
 }
