--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -44,6 +44,8 @@
 @import 'blocks/product/composition.scss';
 @import 'blocks/product/similar-product.scss';
 
+@import 'blocks/catalog/catalog-block.scss';
+
 // PAGES
 @import 'pages/page-home.scss';
 @import 'pages/catalog.scss';
