feat(catalog-card): создаёт стили для модификатора border-none

--- a/src/components/blocks/catalog/catalog-block.pug
+++ b/src/components/blocks/catalog/catalog-block.pug
@@ -114,5 +114,5 @@ mixin catalog-block()
 
           .catalog-block__cards
             each option in optionsCard
-              +catalog-card(option, classCartBtn= "catalog-card__cart-btn--mobile").catalog-block__cards-item
+              +catalog-card(option, classCartBtn= "catalog-card__cart-btn--catalog-block").catalog-card--border-none.catalog-block__cards-item
 
