--- a/src/scss/ui/btn.scss
+++ b/src/scss/ui/btn.scss
@@ -15,15 +15,23 @@
     opacity: 0.8;
   }
 
-  &--base {
+  &--base,
+  &--base-small {
     background-color: $base-bg-btn;
     border: none;
     color: $base;
-    padding: 15px 23px;
+    padding: 15px 20px;
+
+    justify-content: center;
+    width: 100%;
 
     @include hover-focus {
       background-color: $accent-bg-items;
     }
+  }
+
+  &--base-small {
+    padding: 12px 20px 11px;
   }
 
   &--cart {
@@ -31,6 +39,8 @@
     border-radius: 6px;
     padding: 10.5px 12px;
     margin: auto 0;
+
+    justify-content: center;
 
     @include hover-focus {
       background-color: $primary-hover;
