feat(pagination): создаёт разметку и стили подключает к странице

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,6 +17,7 @@
 @import 'ui/news-cards.scss';
 @import 'ui/custom-toggle.scss';
 @import 'ui/slider-card.scss';
+@import 'ui/pagination.scss';
 
 // LAYOUT
 @import 'layout/header.scss';
