--- a/src/components/blocks/catalog/catalog-block.pug
+++ b/src/components/blocks/catalog/catalog-block.pug
@@ -99,6 +99,21 @@ mixin catalog-block()
       },
     ];
 
+    const paginationButtonNext = [
+      {
+        numberPage: '2',
+      },
+      {
+        numberPage: '3',
+      },
+      {
+        numberPage: '4',
+      },
+      {
+        numberPage: '5',
+      },
+    ];
+
   section.catalog-block&attributes(attributes)
     .wrapper
       .catalog-block__container
@@ -127,5 +142,7 @@ mixin catalog-block()
               .catalog-block__request-wrapper
                 +request("Не&nbsp;нашли то&nbsp;что хотели?").request--mobile.catalog-block__request-mobile
 
-            +btn().btn--border-dashed-primary.popular__btn-look
+            +btn().btn--border-dashed-primary.catalog-block__cards-btn
               span Показать еще
+
+            +pagination(paginationButtonNext).catalog-block__pagination
