--- a/src/scss/blocks/catalog/catalog-block.scss
+++ b/src/scss/blocks/catalog/catalog-block.scss
@@ -150,4 +150,25 @@
       display: flex;
     }
   }
+
+  &__cards-btn {
+    display: block;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 18px;
+    min-width: 170px;
+    justify-content: center;
+    margin: 0 auto;
+    margin-bottom: 32px;
+
+    @include vp-tablet-landscape {
+      width: 12.5%;
+      min-width: 170px;
+    }
+  }
+
+  &__pagination {
+    width: fit-content;
+    margin: 0 auto;
+  }
 }
