feat(catalog): Добавляет блок просмотренное

--- a/src/pages/catalog.pug
+++ b/src/pages/catalog.pug
@@ -8,3 +8,4 @@ block pageContent
 
   +breadcrumbs(nameIitemsBreadcrumbs).catalog__breadcrumbs
   +catalog-block().catalog__catalog-block
+  +viewed().catalog__viewed
