--- a/src/scss/pages/catalog.scss
+++ b/src/scss/pages/catalog.scss
@@ -18,4 +18,12 @@
       margin-bottom: 100px;
     }
   }
+
+  &__viewed {
+    margin-bottom: 110px;
+
+    @include vp-tablet {
+      margin-bottom: 120px;
+    }
+  }
 }
