feat(news): создает страницу с блоками и стилями

--- a/src/components/ui/news-cards.pug
+++ b/src/components/ui/news-cards.pug
@@ -1,6 +1,6 @@
 mixin news-cards(options = {})
 
-  .news-card&attributes(attributes)
+  .news-cards&attributes(attributes)
       .news-cards__container
 
         ul.news-cards__list
