--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -47,7 +47,10 @@
 
 @import 'blocks/catalog/catalog-block.scss';
 
+@import 'blocks/news/news-block.scss';
+
 // PAGES
 @import 'pages/page-home.scss';
 @import 'pages/catalog.scss';
 @import 'pages/product.scss';
+@import 'pages/news.scss';
