--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -21,6 +21,8 @@ include ./blocks/product/similar-product
 
 include ./blocks/catalog/catalog-block
 
+include ./blocks/news/news-block
+
 //- UI
 include ./ui/icon
 include ./ui/img
