--- a/src/scss/ui/news-cards.scss
+++ b/src/scss/ui/news-cards.scss
@@ -6,11 +6,11 @@
     list-style-type: none;
     padding: 0;
     margin: 0;
-    margin-bottom: 44px;
+    margin-bottom: 40px;
 
     @include vp-tablet-landscape {
       display: grid;
-      gap: 20px;
+      gap: 30px 20px;
       grid-template-columns: 1fr 1fr 1fr;
       margin-bottom: 40px;
     }
