feat(news-article): создает страницу статьи

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -23,6 +23,8 @@ include ./blocks/catalog/catalog-block
 
 include ./blocks/news/news-block
 
+include ./blocks/news-article/article
+
 //- UI
 include ./ui/icon
 include ./ui/img
