fix(news-block): правит класс и стиль блока

--- a/src/components/blocks/news/news-block.pug
+++ b/src/components/blocks/news/news-block.pug
@@ -94,7 +94,7 @@ mixin news-block()
   section.news-block&attributes(attributes)
     .wrapper
       .news-block__container
-        .news-company__content
+        .news-block__content
           .title.title--medium.news-block__title
             h1 Новости компании
 
