feat(article-banner): создает блок и стили для десктопа

--- a/src/components/blocks/news-article/article.pug
+++ b/src/components/blocks/news-article/article.pug
@@ -1,10 +1,8 @@
 mixin article()
 
   section.article&attributes(attributes)
+    .wrapper
+      .article__container
 
-    .article__container
-      .article__banner
-      .wrapper
-        .article__content
-          .title.title--medium.news-block__title
-            h1 Идейные соображения высшего порядка, а&nbsp;также консультация с&nbsp;широким активом
+        .title.title--medium-large.article__title
+          h2 С&nbsp;другой стороны начало повседневной работы
