--- a/src/pages/news-article.pug
+++ b/src/pages/news-article.pug
@@ -7,5 +7,6 @@ block pageContent
       "Название статьи",
     ];
 
-  +breadcrumbs(nameIitemsBreadcrumbs).news-article__breadcrumbs
+  +breadcrumbs(nameIitemsBreadcrumbs).breadcrumbs--item-white.news-article__breadcrumbs
+  +article-banner().news-article__article-banner
   +article().news-article__article
