--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -24,6 +24,7 @@ include ./blocks/catalog/catalog-block
 include ./blocks/news/news-block
 
 include ./blocks/news-article/article
+include ./blocks/news-article/article-banner
 
 //- UI
 include ./ui/icon
