fix(news-article): правит стили

--- a/src/scss/pages/news-article.scss
+++ b/src/scss/pages/news-article.scss
@@ -1,6 +1,8 @@
 .news-article {
+  display: flex;
+  flex-direction: column;
+
   &__breadcrumbs {
-    position: relative;
     z-index: 3;
 
     padding-top: 45px;
