--- a/src/scss/pages/news-article.scss
+++ b/src/scss/pages/news-article.scss
@@ -4,9 +4,13 @@
 
   &__breadcrumbs {
     z-index: 3;
+    padding-top: 40px;
+    margin-bottom: -59px;
 
-    padding-top: 45px;
-    margin-bottom: -67.4px;
+    @include vp-tablet {
+      padding-top: 45px;
+      margin-bottom: -67.4px;
+    }
   }
 
   &__article-banner {
